# HWdjango2

./: .coverage  .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt
config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
materials/: apps.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_alter_course_options_alter_lesson_options_and_more.py  0005_course_last_update.py
users/: models.py  serializers.py  services.py  urls.py  views.py
users/management/commands/: create_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_payment_status_payment_payment_url_and_more.py
